syntax = "proto3";
package message;

option go_package = "api/proto/message";

service MessageService {
  rpc GetMessage (GetMessageRequest) returns (GetMessageResponse);
}

message GetMessageRequest {
  string query = 1;
}

message GetMessageResponse {
  string message = 1;
}
